TG-662 Made text start at beginning of footer on mobile and fixed
spacing bug with for overlays

--- a/Src/StaticSite/assets/styles/modules/components/_maps.scss
+++ b/Src/StaticSite/assets/styles/modules/components/_maps.scss
@@ -89,6 +89,7 @@ $map-height: rem($base-height*12);
         min-height: $map-height;
         background-color: rgba(255,255,255,0.75); // TODO Variable with opacity
         pointer-events: auto;
+        line-height: 1.3;
     }
     > h3 {
         margin: $space-double;
